--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.js filter=lfs diff=lfs merge=lfs -text
+uylab[[:space:]]videos[[:space:]]1[[:space:]]to[[:space:]]13[[:space:]]added filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
